<resources>
    <string name="app_name">Yeongwha</string>
    <string name="runtime">Runtime:</string>
    <string name="rating_value">rating</string>
    <string name="rating">Rating:</string>
    <string name="movie_title">Title</string>
    <string name="movie_info">Movie Info</string>
    <string name="release_date">Release Date:</string>
    <string name="release_date_value">date</string>
    <string name="budget">Budget:</string>
    <string name="budget_value">budget</string>
    <string name="revenue">Revenue:</string>
    <string name="revenue_value">revenue</string>
    <string name="overview">Overview</string>
    <string name="runtime_value">hour</string>
    <string name="connection_error">Connection Error</string>
    <string name="image_splashscreen">image_splashscreen</string>

    <string name="transition_from_home_to_search" translatable="false">transitionFromHomeToSearch</string>
    <string name="lorem">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry\'s standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="yeo_info">Yeonghwa is an application that we will create with the theme of a mobile-based movie directory. This application is inspired by the IMDb website, which is also a movie directory. This application was created with the aim of helping users browse existing and upcoming films.</string>
    <string name="support">Have questions or feedback about Yeongwha? Please see contact our support and feedback email for guidance about the ways you can receive support and provide feedback.</string>
</resources>