<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".movie_details.MovieDetail">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <ProgressBar
            android:id="@+id/progress_bar"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:visibility="gone"/>

        <TextView
            android:id="@+id/txt_error"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/connection_error"
            android:visibility="gone"/>

        <ScrollView
            app:layout_constraintTop_toTopOf="parent"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:id="@+id/linearLayout">


                <ImageView
                    android:id="@+id/iv_movie_poster"
                    android:layout_width="match_parent"
                    android:layout_height="500dp"
                    android:layout_gravity="center"
                    android:scaleType="matrix"
                    android:src="@drawable/poster_placeholder"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:layout_margin="8dp">

                    <TextView
                        android:id="@+id/movie_title"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/movie_title"
                        android:textStyle="bold"
                        android:textColor="@color/white"
                        android:textSize="18sp"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/movie_info"
                        android:layout_marginTop="15dp"
                        android:textColor="@color/white"
                        android:textSize="14sp"
                        android:textStyle="bold"/>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="horizontal">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="10dp"
                            android:text="@string/release_date"
                            android:textSize="12sp"
                            android:textColor="@color/white"
                            android:textStyle="bold"/>

                        <TextView
                            android:id="@+id/movie_release_date"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="10dp"
                            android:layout_marginLeft="10dp"
                            android:text="@string/release_date_value"
                            android:textColor="@color/white"
                            android:textSize="12sp"/>
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="horizontal">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="2dp"
                            android:text="@string/rating"
                            android:textSize="12sp"
                            android:textColor="@color/white"
                            android:textStyle="bold"/>

                        <TextView
                            android:id="@+id/movie_rating"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="2dp"
                            android:layout_marginLeft="10dp"
                            android:text="@string/rating_value"
                            android:textColor="@color/white"
                            android:textSize="12sp"/>
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="horizontal">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="2dp"
                            android:text="@string/runtime"
                            android:textColor="@color/white"
                            android:textSize="12sp"
                            android:textStyle="bold"/>

                        <TextView
                            android:id="@+id/movie_runtime"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="2dp"
                            android:layout_marginLeft="10dp"
                            android:text="@string/runtime_value"
                            android:textColor="@color/white"
                            android:textSize="12sp"/>
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="horizontal">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="2dp"
                            android:text="@string/budget"
                            android:textColor="@color/white"
                            android:textSize="12sp"
                            android:textStyle="bold"/>

                        <TextView
                            android:id="@+id/movie_budget"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="2dp"
                            android:layout_marginLeft="10dp"
                            android:text="@string/budget_value"
                            android:textColor="@color/white"
                            android:textSize="12sp"/>
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="horizontal">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="2dp"
                            android:text="@string/revenue"
                            android:textColor="@color/white"
                            android:textSize="12sp"
                            android:textStyle="bold"/>

                        <TextView
                            android:id="@+id/movie_revenue"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="2dp"
                            android:layout_marginLeft="10dp"
                            android:text="@string/revenue_value"
                            android:textColor="@color/white"
                            android:textSize="12sp"/>
                    </LinearLayout>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="2dp"
                        android:text="@string/overview"
                        android:textColor="@color/white"
                        android:textSize="12sp"
                        android:textStyle="bold"/>
                    <TextView
                        android:id="@+id/movie_overview"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="2dp"
                        android:text="@string/overview_content"
                        android:textColor="@color/white"
                        android:textSize="12sp"/>
                </LinearLayout>

            </LinearLayout>
        </ScrollView>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>